--- a/demo/templates/shopcar.html
+++ b/demo/templates/shopcar.html
@@ -1,14 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>购物车</title>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -34,7 +23,7 @@
 		}
 		.nav {
 		    height: 50px;
-		    background: black;
+		    background: LightSteelBlue;
 		}
 
 		.nav>li {
@@ -45,7 +34,6 @@
 		    padding: 0px 30px;
 		    position: relative;
 		}
-
 
 		li {
 		    position: relative;
@@ -172,7 +160,7 @@
 			<br>
 		 <tr>
 		 	<td>
-		 		<img src="../img/1.jpg/" alt="暂无书籍图片" width="150" height="200" />
+		 		<img src="/static/images/1.jpg/" alt="暂无书籍图片" width="150" height="200" />
 		 	</td>
 		 	<td class="left">《飞鸟集》</td>
 		 	<td class="sum">0.00元</td>
@@ -182,7 +170,7 @@
 		 </tr>
 		 <tr>
 		 	<td >
-				<img src="../img/1.jpg/" alt="暂无书籍图片" width="150" height="200"/>
+				<img src="/static/images/1.jpg/" alt="暂无书籍图片" width="150" height="200"/>
 				</td>
 				<td class="left">月亮与六便士</td>
 				<td class="sum">0.00元</td>
@@ -192,7 +180,7 @@
 		 </tr>
 			<tr>
 				<td>
-					<img src="../img/1.jpg/" alt="暂无书籍图片" width="150" height="200"/>
+					<img src="/static/images/1.jpg/" alt="暂无书籍图片" width="150" height="200"/>
 				</td>
 				<td class="left">小王子</td>
 				<td class="sum">0.00元</td>
@@ -202,7 +190,7 @@
 			</tr>
 			<tr>
 				<td>
-					<img src="../img/1.jpg/" alt="暂无书籍图片" width="150" height="200"/>
+					<img src="/static/images/1.jpg/" alt="暂无书籍图片" width="150" height="200"/>
 				</td>
 				<td class="left">新月集</td>
 				<td class="sum">0.00元</td>
@@ -212,7 +200,7 @@
 			</tr>
 		 <tr>
 		 	<td>
-		 		<img src="../img/1.jpg/" alt="暂无书籍图片" width="150" height="200"/>
+		 		<img src="/static/images/1.jpg/" alt="暂无书籍图片" width="150" height="200"/>
 		 	</td>
 		 	<td class="left">茶馆</td>
 		 	<td class="sum">0.00元</td>
